<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SchoolDetailsFragment">

        <TextView
            android:id="@+id/details_school_name"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_4x"
            android:layout_marginEnd="@dimen/margin_2x"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sat_score_reading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/avg_reading_score_title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_school_name" />

        <TextView
            android:id="@+id/sat_score_writing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/avg_writing_score_title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sat_score_reading_title" />

        <TextView
            android:id="@+id/sat_score_math_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sat_score_writing_title"
            android:text="@string/avg_math_score_title" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/margin_0"
            android:layout_height="@dimen/height_divider"
            android:layout_marginTop="@dimen/margin_2x"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sat_score_math_title" />

        <TextView
            android:id="@+id/about_us_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_3x"
            android:text="@string/about_us_title"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/email_addr_title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_title" />

        <TextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:textColor="@color/black"
            android:text="@string/phone_number_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_title" />

        <TextView
            android:id="@+id/school_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:textColor="@color/black"
            android:text="@string/school_website_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_title" />

        <TextView
            android:id="@+id/email_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:autoLink="web|email"
            android:text="N/A"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/email_title"
            app:layout_constraintTop_toTopOf="@+id/email_title" />

        <TextView
            android:id="@+id/phone_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:autoLink="phone"
            android:text="N/A"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/phone_title"
            app:layout_constraintTop_toTopOf="@+id/phone_title" />

        <TextView
            android:id="@+id/website_value"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_2x"
            android:autoLink="web"
            android:maxLines="1"
            android:text="N/A"
            android:ellipsize="end"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/school_website"
            app:layout_constraintTop_toTopOf="@+id/school_website" />

        <TextView
            android:id="@+id/reading_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:text="N/A"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/sat_score_reading_title"
            app:layout_constraintTop_toTopOf="@+id/sat_score_reading_title" />

        <TextView
            android:id="@+id/writing_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:text="N/A"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/sat_score_writing_title"
            app:layout_constraintTop_toTopOf="@+id/sat_score_writing_title" />

        <TextView
            android:id="@+id/math_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:textColor="@color/black"
            android:text="N/A"
            app:layout_constraintStart_toEndOf="@+id/sat_score_math_title"
            app:layout_constraintTop_toTopOf="@+id/sat_score_math_title" />

        <ProgressBar
            android:id="@+id/progressBarDetails"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:textColor="@color/black"
            android:text="@string/address_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_website" />

        <TextView
            android:id="@+id/address_value"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_2x"
            android:autoLink="map"
            android:text="N/A"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/address_title"
            app:layout_constraintTop_toTopOf="@+id/address_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>